[tool.poetry]
name = "dojo-toolkit"
version = "0.7.0"
description = "Toolkit for Python Coding Dojos."
authors = ["grupy-sanca"]
packages = [{ include = "dojo_toolkit" }]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
watchdog = "^2.1.6"
pyglet = "^1.5.21"
pgi = {version = "^0.0.11", platform = "linux"}
clint = "^0.5.1"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"
coverage = {extras = ["toml"], version = "^6.1.2"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv --cov=dojo_toolkit --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
src_paths = ["dojo_toolkit", "tests"]
multi_line_output = 3
include_trailing_comma = true

[tool.poetry.scripts]
dojo = "dojo_toolkit.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
