[tool.poetry]
name = "dojo-toolkit"
version = "0.8.1"
description = "Toolkit for Python Coding Dojos."
authors = ["grupy-sanca"]
packages = [{ include = "dojo_toolkit" }]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
watchdog = "^2.1.6"
pyglet = "^1.5.21"
pgi = {version = "^0.0.11", platform = "linux"}
clint = "^0.5.1"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
coverage = {extras = ["toml"], version = "^6.1.2"}
ruff = "^0.0.278"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.black]
target-version = ['py311']
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "I",  # isort
    "C4",  # flake8-comprehensions
    "F",  # pyflakes
    "E",  # pycodestyle
    "TID",  # flake8-tidy-imports
    "C901",  # mccabe
]
ignore = [
    "E501",  # line too long, handled by black
    "C401",  # generator syntax for sets vs always force set comprehension
    "PLC0414",  # allow explicit re-exports using 'as' without forcing __all__
]

[tool.isort]
line_length = 100
src_paths = ["dojo_toolkit", "tests"]
multi_line_output = 3
include_trailing_comma = true

[tool.poetry.scripts]
dojo = "dojo_toolkit.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
